[REFACTOR] 선택대학 시험 조회 쿼리 개선